# osh-2022-labs

./: README.md
lab1/: .config  .gitignore  bzImage
lab1/syscall/: bzImage  initrd.c
lab2/: README.md
lab2/shell/: CMakeLists.txt  error.cpp  error.h  main.cpp  main.h  shell  shell.cpp  shell.h
lab2/strace/: CMakeLists.txt  strace.cpp  test.cpp
lab3/: 1.c  2.c  3.c  CMakeLists.txt  README.md
lab4/: README.md  deploy.md  test_analyze.md
